# nandemo-jinro

./: .firebaserc  .gitignore  Cargo.toml  README.md  firebase.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css  tsconfig.json
javascript/: @type.d.ts  index.ts  package-lock.json  package.json
javascript/src/: func.ts
public/: manifest.webmanifest  sitemap.xml
src/: entrance.rs  firestore.rs  function.rs  hook.rs  landing.rs  lobby.rs  main.rs  members.rs  roll.rs  rolled.rs  room.rs  rule_make.rs  state_hooks.rs  storage.rs
src/components/: entrance.rs  landing.rs  layout.rs  lobby.rs  mod.rs  room.rs
src/hooks/: firestore.rs  mod.rs  roll.rs
