[package]
name = "roleroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "packages/presentational",
    "packages/firestore",
    "packages/model",
    "packages/firestore_hooks",
]

[dependencies]
yew = "0.19"
js-sys = "0.3"
web-sys = "0.3"
presentational = {path = "./packages/presentational"}
firestore = {path = "./packages/firestore"}
model = {path = "./packages/model"}
yew-router = "0.16"
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
firestore_hooks = {path = "./packages/firestore_hooks"}
