[package]
name = "roleroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "packages/presentational",
    "packages/firestore",
    "packages/model",
    "packages/firestore_hooks",
    "packages/landing",
    "packages/router",
    "packages/user_id_storage",
    "packages/lobby",
    "packages/rule_make",
    "packages/roll"
]

[dependencies]
yew = "0.19"
presentational = {path = "./packages/presentational"}
firestore = {path = "./packages/firestore"}
model = {path = "./packages/model"}
yew-router = "0.16"
firestore_hooks = {path = "./packages/firestore_hooks"}
router = {path = "./packages/router"}
landing = {path = "./packages/landing"}
user_id_storage = {path = "./packages/user_id_storage"}
lobby = {path = "./packages/lobby"}
rule_make = {path = "./packages/rule_make"}
roll = {path = "./packages/roll"}