[package]
name = "roleroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "packages/atoms",
    "packages/firestore",
    "packages/model",
    "packages/firestore_hooks",
    "packages/landing",
    "packages/router",
    "packages/user_id_storage",
    "packages/lobby",
    "packages/rule_make",
    "packages/roll",
    "packages/layouting",
    "packages/historical",
    "packages/use_historical",
    "packages/app_root",
    "packages/use_history_state",
]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
yew = {version="0.20", features=["csr"]}
yew-router = "0.17"
app_root = {path = "./packages/app_root"}